feat: add user authentication & middleware

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,15 @@
+# ─── Server ──────────────────────────────────────────────────────────────────
 PORT=5000
+NODE_ENV=development
+
+# ─── Database ─────────────────────────────────────────────────────────────────
 MONGO_URI=mongodb://127.0.0.1:27017/mini-social-feed
-JWT_SECRET=your_jwt_secret_key
-JWT_EXPIRES_IN=1d
+
+# ─── JWT ──────────────────────────────────────────────────────────────────────
+JWT_SECRET=your_super_secret_jwt_key_here
+JWT_EXPIRES_IN=7d
+
+# ─── Push Notifications ───────────────────────────────────────────────────────
+# No extra config needed! The mobile app sends its Expo push token via
+# PUT /api/auth/fcm-token  after login. The server sends notifications
+# through Expo's push service (expo-server-sdk) automatically.
